--- a/sdk/dns/Azure.ResourceManager.Dns/tests/Azure.ResourceManager.Dns.Tests.csproj
+++ b/sdk/dns/Azure.ResourceManager.Dns/tests/Azure.ResourceManager.Dns.Tests.csproj
@@ -12,9 +12,10 @@
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.ResourceManager.Dns.csproj" />
+    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Resources" />
+    <!--<PackageReference Include="Azure.ResourceManager.Resources" />-->
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
 </Project>
