--- a/sdk/communication/Azure.ResourceManager.Communication/tests/Azure.ResourceManager.Communication.Tests.csproj
+++ b/sdk/communication/Azure.ResourceManager.Communication/tests/Azure.ResourceManager.Communication.Tests.csproj
@@ -6,9 +6,11 @@
   <ItemGroup>
     <ProjectReference Include="$(AzureCoreTestFramework)" />
     <ProjectReference Include="..\src\Azure.ResourceManager.Communication.csproj" />
+    <ProjectReference Include="..\..\..\resources\Azure.ResourceManager.Resources\src\Azure.ResourceManager.Resources.csproj" />
+    <ProjectReference Include="..\..\..\resourcemanager\Azure.ResourceManager\src\Azure.ResourceManager.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Azure.ResourceManager.Resources" />
+    <!--<PackageReference Include="Azure.ResourceManager.Resources" />-->
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
 </Project>
