[TextAnalytics] Updating code owners

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -142,7 +142,7 @@
 /sdk/cognitiveservices/Knowledge.QnAMaker/            @bingisbestest @nerajput1607
 
 # PRLabel: %Cognitive - Text Analytics
-/sdk/textanalytics/                             @maririos
+/sdk/textanalytics/                             @maririos @kinelski
 
 # ServiceLabel: %Cognitive - Text Analytics %Service Attention
 /sdk/cognitiveservices/Language.TextAnalytics/            @assafi
