--- a/sdk/iotcentral/Microsoft.Azure.Management.IotCentral/src/Microsoft.Azure.Management.IotCentral.csproj
+++ b/sdk/iotcentral/Microsoft.Azure.Management.IotCentral/src/Microsoft.Azure.Management.IotCentral.csproj
@@ -12,8 +12,10 @@
     <PackageTags>Microsoft Azure IotCentral;IotCentral management;IotCentral;</PackageTags>
     <PackageReleaseNotes>
       <![CDATA[
-        This release removes legacy S1 SKU, has S360 fixes, releases new RP version 2021-06-01,
-        and adds support for regional resources and system-assigned Managed Identities in IoT Central.
+        This release removes legacy S1 SKU, 
+        adds support for regions while removing geographies (for location), 
+        releases new RP version 2021-06-01,
+        and adds support system-assigned Managed Identities in IoT Central.
       ]]>
     </PackageReleaseNotes>
   </PropertyGroup>
