--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -167,7 +167,7 @@
     <PackageReference Update="Azure.ResourceManager.Compute" Version="1.0.0-beta.1" />
     <PackageReference Update="Azure.ResourceManager.Network" Version="1.0.0-beta.1" />
     <PackageReference Update="Azure.ResourceManager.Resources" Version="1.0.0-beta.1" />
-    <PackageReference Update="Azure.ResourceManager.Storage" Version="1.0.0-alpha.20210831.3" />
+    <PackageReference Update="Azure.ResourceManager.Storage" Version="1.0.0-beta.3" />
     <PackageReference Update="Azure.Search.Documents" Version="11.2.0" />
     <PackageReference Update="Azure.Security.KeyVault.Secrets" Version="4.2.0-beta.4" />
     <PackageReference Update="Azure.Storage.Blobs" Version="12.10.0" />
