--- a/sdk/appconfiguration/Azure.ResourceManager.AppConfiguration/tests/Azure.ResourceManager.AppConfiguration.Tests.csproj
+++ b/sdk/appconfiguration/Azure.ResourceManager.AppConfiguration/tests/Azure.ResourceManager.AppConfiguration.Tests.csproj
@@ -5,11 +5,10 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\src\Azure.ResourceManager.AppConfiguration.csproj" />
-    <ProjectReference Include="..\..\..\network\Azure.ResourceManager.Network\src\Azure.ResourceManager.Network.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Azure.ResourceManager.Resources" />
-    <!--<PackageReference Include="Azure.ResourceManager.Network" />-->
+    <PackageReference Include="Azure.ResourceManager.Network" />
     <PackageReference Include="Microsoft.Azure.AutoRest.CSharp" VersionOverride="$(MgmtAutorestVersion)" PrivateAssets="All" />
   </ItemGroup>
 </Project>
