--- a/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
+++ b/sdk/core/Azure.Core/tests/Azure.Core.Tests.csproj
@@ -5,6 +5,7 @@
     <DefineConstants>$(DefineConstants);HAS_INTERNALS_VISIBLE_CORE</DefineConstants>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <IncludeGeneratorSharedCode>true</IncludeGeneratorSharedCode>
+    <DefineConstants>$(DefineConstants);EXPERIMENTAL</DefineConstants>
   </PropertyGroup>
 
   <ItemGroup>
@@ -44,6 +45,9 @@
     <Compile Include="..\src\Shared\PemReader.cs" LinkBase="Shared" />
     <Compile Include="..\src\Shared\TypeBinder.cs" LinkBase="Shared" /> 
     <Compile Include="..\..\..\..\common\ManagementTestShared\Redesign\*.cs" LinkBase="Shared\Mgmt" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="TestClients\RequestContextTestClient\Azure.Template.LLC.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Update="PemReaderTests.Keys.cs" DependentUpon="PemReaderTests.cs" />
