--- a/sdk/core/Azure.Core/tests/TestClients/RequestContextTestClient/Azure.Template.LLC.csproj
+++ b/sdk/core/Azure.Core/tests/TestClients/RequestContextTestClient/Azure.Template.LLC.csproj
@@ -29,7 +29,7 @@
     <Compile Include="$(AzureCoreSharedSources)Argument.cs" LinkBase="Shared" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\core\Azure.Core\src\Azure.Core.csproj" />
+    <ProjectReference Include="..\..\..\src\Azure.Core.csproj" />
   </ItemGroup>
 
 </Project>
