--- a/sdk/timeseriesinsights/Azure.IoT.TimeSeriesInsights/samples/Directory.Build.props
+++ b/sdk/timeseriesinsights/Azure.IoT.TimeSeriesInsights/samples/Directory.Build.props
@@ -10,4 +10,8 @@
     Project="$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., Directory.Build.props))\Directory.Build.props"
 		Condition="'$([MSBuild]::GetDirectoryNameOfFileAbove($(MSBuildThisFileDirectory).., Directory.Build.props))' != ''"
   />
+
+  <PropertyGroup>
+    <IsShippingLibrary>false</IsShippingLibrary>
+  </PropertyGroup>
 </Project>
