--- a/eng/pipelines/templates/stages/archetype-net-release.yml
+++ b/eng/pipelines/templates/stages/archetype-net-release.yml
@@ -163,7 +163,7 @@ stages:
                       artifact: ${{parameters.ArtifactName}}-signed
                     - template: /pipelines/steps/publish-symbols.yml@azure-sdk-build-tools
                       parameters:
-                        BuildToolsRepositoryPath: $(Pipeline.Workspace)/azure-sdk-build-tools
+                        BuildToolsRepositoryPath: $(Pipeline.Workspace)/s/azure-sdk-build-tools
                         PackagesPath: $(Pipeline.Workspace)/${{parameters.ArtifactName}}-signed/${{artifact.name}}
                         StagingDirectory: $(Build.ArtifactStagingDirectory)/symbols
                     - template: /eng/common/pipelines/templates/steps/create-apireview.yml
@@ -174,6 +174,7 @@ stages:
                         MarkPackageAsShipped: true
                         ArtifactName: ${{parameters.ArtifactName}}
                         PackageName: ${{artifact.name}}
+                        SourceRootPath: $(Pipeline.Workspace)/s/azure-sdk-for-net
 
               - ${{if ne(artifact.skipPublishDocMs, 'true')}}:
                 - job: PublicDocsMS
