--- a/sdk/durabletask/ci.mgmt.yml
+++ b/sdk/durabletask/ci.mgmt.yml
@@ -10,13 +10,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/informaticadatamanagement/ci.mgmt.yml
-    - sdk/informaticadatamanagement/Azure.ResourceManager.DurableTask/
+    - sdk/durabletask/ci.mgmt.yml
+    - sdk/durabletask/Azure.ResourceManager.DurableTask/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: informaticadatamanagement
+    ServiceDirectory: durabletask
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.DurableTask
