--- a/eng/Packages.Data.props
+++ b/eng/Packages.Data.props
@@ -373,7 +373,7 @@
     <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="5.0.0" />
     <PackageReference Update="Microsoft.Extensions.Configuration" Version="5.0.0" />
     <PackageReference Update="Microsoft.Extensions.Hosting" Version="8.0.1" />
-    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="8.0.0-rc.1.23419.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging.Configuration" Version="8.0.1" />
     <PackageReference Update="Microsoft.Extensions.Logging.Console" Version="6.0.0"/>
     <PackageReference Update="Microsoft.Extensions.Primitives" Version="6.0.1"/>
     <PackageReference Update="Microsoft.Extensions.DependencyInjection" Version="3.1.32" />
@@ -423,6 +423,7 @@
     <PackageReference Update="xunit.runner.visualstudio" Version="2.4.2" />
     <PackageReference Update="xunit" Version="2.4.2" />
   </ItemGroup>
+
   <ItemGroup Condition="'$(TargetFramework)'=='netstandard2.0'">
     <PackageDownload Update="NETStandard.Library.Ref" Version="[2.1.0]" />
   </ItemGroup>
