--- a/eng/pipelines/templates/steps/analyze.yml
+++ b/eng/pipelines/templates/steps/analyze.yml
@@ -56,7 +56,8 @@ steps:
 
   - pwsh: |
       $failed = $false
-      if ("$(ProjectNames)") {
+
+      if ('$(ProjectNames)' -and '$(ProjectNames)' -notlike '$(*')){
         $serviceDirectories = "$(ChangedServices)" -split ","
         $ScanPaths = @()
         foreach ($ServiceDirectory in $serviceDirectories) {
