--- a/sdk/openai/tools/TestFramework/src/OpenAI.TestFramework.csproj
+++ b/sdk/openai/tools/TestFramework/src/OpenAI.TestFramework.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="NUnit3TestAdapter" />
     <PackageReference Include="Moq" />
     <PackageReference Include="System.ValueTuple" />
+    <PackageReference Include="System.ClientModel" />
   </ItemGroup>
 
   <ItemGroup>
