--- a/sdk/carbon/ci.mgmt.yml
+++ b/sdk/carbon/ci.mgmt.yml
@@ -10,13 +10,13 @@ pr:
     - release/*
   paths:
     include:
-    - sdk/carbonoptimization/ci.mgmt.yml
-    - sdk/carbonoptimization/Azure.ResourceManager.CarbonOptimization/
+    - sdk/carbon/ci.mgmt.yml
+    - sdk/carbon/Azure.ResourceManager.CarbonOptimization/
 
 extends:
   template: /eng/pipelines/templates/stages/archetype-sdk-client.yml
   parameters:
-    ServiceDirectory: carbonoptimization
+    ServiceDirectory: carbon
     LimitForPullRequest: true
     Artifacts:
     - name: Azure.ResourceManager.CarbonOptimization
